--- a/SocialFusion/Class/NewFeedPhotoCell.xib
+++ b/SocialFusion/Class/NewFeedPhotoCell.xib
@@ -38,14 +38,63 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIImageView" id="885408502">
+					<object class="IBUIView" id="1013684620">
 						<reference key="NSNextResponder" ref="156024869"/>
 						<int key="NSvFlags">292</int>
+						<array class="NSMutableArray" key="NSSubviews">
+							<object class="IBUIImageView" id="885408502">
+								<reference key="NSNextResponder" ref="1013684620"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrameSize">{289, 217}</string>
+								<reference key="NSSuperview" ref="1013684620"/>
+								<reference key="NSNextKeyView" ref="630536754"/>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+							</object>
+							<object class="IBUIButton" id="68940427">
+								<reference key="NSNextResponder" ref="1013684620"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrameSize">{289, 217}</string>
+								<reference key="NSSuperview" ref="1013684620"/>
+								<string key="NSReuseIdentifierKey">_NS:225</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<int key="IBUIContentHorizontalAlignment">0</int>
+								<int key="IBUIContentVerticalAlignment">0</int>
+								<bool key="IBUIAdjustsImageWhenHighlighted">NO</bool>
+								<object class="NSColor" key="IBUIHighlightedTitleColor" id="484760707">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MQA</bytes>
+								</object>
+								<object class="NSColor" key="IBUINormalTitleColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+								</object>
+								<object class="NSColor" key="IBUINormalTitleShadowColor" id="8379662">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MC41AA</bytes>
+								</object>
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="521506468">
+									<int key="type">2</int>
+									<double key="pointSize">15</double>
+								</object>
+								<object class="NSFont" key="IBUIFont" id="933203324">
+									<string key="NSName">Helvetica-Bold</string>
+									<double key="NSSize">15</double>
+									<int key="NSfFlags">16</int>
+								</object>
+							</object>
+						</array>
 						<string key="NSFrame">{{9, 49}, {289, 217}}</string>
 						<reference key="NSSuperview" ref="156024869"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="356641639"/>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="NSReuseIdentifierKey">_NS:196</string>
+						<object class="NSColor" key="IBUIBackgroundColor" id="24950055">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MCAwAA</bytes>
+						</object>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 					<object class="IBUIView" id="814050697">
@@ -57,7 +106,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{-14, 0}, {320, 50}}</string>
 								<reference key="NSSuperview" ref="814050697"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1032182944"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -71,7 +119,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{8, 3}, {34, 34}}</string>
 								<reference key="NSSuperview" ref="814050697"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="476670876"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -81,49 +128,31 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{8, 3}, {34, 34}}</string>
 								<reference key="NSSuperview" ref="814050697"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1012924412"/>
-								<object class="NSColor" key="IBUIBackgroundColor" id="24950055">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MCAwAA</bytes>
-								</object>
+								<reference key="IBUIBackgroundColor" ref="24950055"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<bool key="IBUIShowsTouchWhenHighlighted">YES</bool>
-								<object class="NSColor" key="IBUIHighlightedTitleColor" id="484760707">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MQA</bytes>
-								</object>
+								<reference key="IBUIHighlightedTitleColor" ref="484760707"/>
 								<object class="NSColor" key="IBUINormalTitleColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 								</object>
-								<object class="NSColor" key="IBUINormalTitleShadowColor" id="8379662">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MC41AA</bytes>
-								</object>
+								<reference key="IBUINormalTitleShadowColor" ref="8379662"/>
 								<object class="NSCustomResource" key="IBUINormalImage">
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">detail_head.png</string>
 								</object>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="521506468">
-									<int key="type">2</int>
-									<double key="pointSize">15</double>
-								</object>
-								<object class="NSFont" key="IBUIFont" id="278968157">
-									<string key="NSName">Helvetica-Bold</string>
-									<double key="NSSize">15</double>
-									<int key="NSfFlags">16</int>
-								</object>
+								<reference key="IBUIFontDescription" ref="521506468"/>
+								<reference key="IBUIFont" ref="933203324"/>
 							</object>
 							<object class="IBUIButton" id="1012924412">
 								<reference key="NSNextResponder" ref="814050697"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{47, 3}, {67, 34}}</string>
 								<reference key="NSSuperview" ref="814050697"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="109743227"/>
 								<reference key="IBUIBackgroundColor" ref="24950055"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -138,14 +167,13 @@
 								</object>
 								<reference key="IBUINormalTitleShadowColor" ref="8379662"/>
 								<reference key="IBUIFontDescription" ref="521506468"/>
-								<reference key="IBUIFont" ref="278968157"/>
+								<reference key="IBUIFont" ref="933203324"/>
 							</object>
 							<object class="IBUIButton" id="393285137">
 								<reference key="NSNextResponder" ref="814050697"/>
 								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{266, -2}, {44, 44}}</string>
 								<reference key="NSSuperview" ref="814050697"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="885408502"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -177,7 +205,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{178, -2}, {94, 44}}</string>
 								<reference key="NSSuperview" ref="814050697"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="656811951"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -198,7 +225,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{180, 10}, {80, 20}}</string>
 								<reference key="NSSuperview" ref="814050697"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="393285137"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
@@ -231,7 +257,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{55, 10}, {141, 20}}</string>
 								<reference key="NSSuperview" ref="814050697"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="219290315"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
@@ -267,7 +292,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{3, -2}, {45, 45}}</string>
 								<reference key="NSSuperview" ref="814050697"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="825501182"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -279,19 +303,16 @@
 						</array>
 						<string key="NSFrameSize">{306, 40}</string>
 						<reference key="NSSuperview" ref="156024869"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="403529527"/>
 						<reference key="IBUIBackgroundColor" ref="24950055"/>
 						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUITextView" id="356641639">
+					<object class="IBUITextView" id="630536754">
 						<reference key="NSNextResponder" ref="156024869"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 270}, {288, 65}}</string>
 						<reference key="NSSuperview" ref="156024869"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="24950055"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -316,7 +337,6 @@
 				</array>
 				<string key="NSFrameSize">{306, 342}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="814050697"/>
 				<reference key="IBUIBackgroundColor" ref="24950055"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -324,14 +344,6 @@
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
 			<array class="NSMutableArray" key="connectionRecords">
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">imageView</string>
-						<reference key="source" ref="156024869"/>
-						<reference key="destination" ref="885408502"/>
-					</object>
-					<int key="connectionID">15</int>
-				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">_userNameLabel</string>
@@ -368,9 +380,17 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">_commentTextView</string>
 						<reference key="source" ref="156024869"/>
-						<reference key="destination" ref="356641639"/>
+						<reference key="destination" ref="630536754"/>
 					</object>
 					<int key="connectionID">31</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">imageView</string>
+						<reference key="source" ref="156024869"/>
+						<reference key="destination" ref="885408502"/>
+					</object>
+					<int key="connectionID">15</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -408,6 +428,15 @@
 					</object>
 					<int key="connectionID">20</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">didClickImageView:</string>
+						<reference key="source" ref="68940427"/>
+						<reference key="destination" ref="156024869"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">36</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -433,8 +462,8 @@
 						<reference key="object" ref="156024869"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="814050697"/>
-							<reference ref="885408502"/>
-							<reference ref="356641639"/>
+							<reference ref="630536754"/>
+							<reference ref="1013684620"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -452,11 +481,6 @@
 							<reference ref="476670876"/>
 							<reference ref="1032182944"/>
 						</array>
-						<reference key="parent" ref="156024869"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">5</int>
-						<reference key="object" ref="885408502"/>
 						<reference key="parent" ref="156024869"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -506,8 +530,27 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">30</int>
-						<reference key="object" ref="356641639"/>
+						<reference key="object" ref="630536754"/>
 						<reference key="parent" ref="156024869"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">32</int>
+						<reference key="object" ref="1013684620"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="68940427"/>
+							<reference ref="885408502"/>
+						</array>
+						<reference key="parent" ref="156024869"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">33</int>
+						<reference key="object" ref="68940427"/>
+						<reference key="parent" ref="1013684620"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">5</int>
+						<reference key="object" ref="885408502"/>
+						<reference key="parent" ref="1013684620"/>
 					</object>
 				</array>
 			</object>
@@ -524,6 +567,8 @@
 				<string key="3.CustomClassName">NewFeedPhotoCell</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="30.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="32.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="33.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -534,73 +579,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">31</int>
+			<int key="maxID">36</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">NewFeedPhotoCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="repost:">id</string>
-						<string key="selectUser:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="repost:">
-							<string key="name">repost:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="selectUser:">
-							<string key="name">selectUser:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="_commentLabel">UILabel</string>
-						<string key="_commentTextView">UITextView</string>
-						<string key="_headFrameImageView">UIImageView</string>
-						<string key="_headImageView">UIImageView</string>
-						<string key="_userNameLabel">UILabel</string>
-						<string key="captainLabel">UILabel</string>
-						<string key="imageView">UIImageView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="_commentLabel">
-							<string key="name">_commentLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="_commentTextView">
-							<string key="name">_commentTextView</string>
-							<string key="candidateClassName">UITextView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="_headFrameImageView">
-							<string key="name">_headFrameImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="_headImageView">
-							<string key="name">_headImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="_userNameLabel">
-							<string key="name">_userNameLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="captainLabel">
-							<string key="name">captainLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="imageView">
-							<string key="name">imageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NewFeedPhotoCell.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
